<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/table1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="10"
        android:layout_rowWeight="10"/>

    <Button
        android:id="@+id/table2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_2"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="10"
        android:layout_rowWeight="10"/>

    <Button
        android:id="@+id/table3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_3"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="10"
        android:layout_rowWeight="10"/>

    <Button
        android:id="@+id/table4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_4"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="10"
        android:layout_rowWeight="10"/>
</GridLayout>