<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ReserveActivity">

    <TextView
        android:id="@+id/reserve_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:text="@string/reserve_a_table_for"
        android:textAlignment="center"
        android:textSize="24sp"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/customerName_editText"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/customer_name"
        android:inputType="textPersonName"
        android:paddingTop="@dimen/padding_top"
        android:textColorHint="@android:color/black"
        android:autofillHints="" />

<!--    <EditText-->
<!--        android:id="@+id/tableNumber_editText"-->
<!--        style="@style/NameStyle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:hint="Table Number"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColorHint="@android:color/darker_gray" />-->

    <Button
        android:id="@+id/reserve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto"
        android:text="@string/reserve" />

</LinearLayout>